--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/InventoryManagement.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-8.0.24.jar=/home/dev/Downloads/mysql-connector-java_8.0.24-1ubuntu20.04_all/data/usr/share/java/mysql-connector-java-8.0.24.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-8.0.24.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
