--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=/home/dev/.netbeans/8.2/build.properties
+file.reference.mysql-connector-java-8.0.24.jar=C:\\Users\\admin\\Desktop\\Education\\java\\1. Project\\mysql-connector-java-8.0.24\\mysql-connector-java-8.0.24.jar
+user.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\12.3\\build.properties
