Quantity validation done

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,11 +32,12 @@ dist.jar=${dist.dir}/InventoryManagement.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-8.0.24.jar=/home/dev/Downloads/mysql-connector-java_8.0.24-1ubuntu20.04_all/data/usr/share/java/mysql-connector-java-8.0.24.jar
+file.reference.mysql-connector-java-8.0.24.jar-1=/home/dev/Downloads/mysql-connector-java_8.0.24-1ubuntu20.04_all/data/usr/share/java/mysql-connector-java-8.0.24.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.24.jar}:\
-    ${libs.MySQLDriver.classpath}
+    ${file.reference.mysql-connector-java-8.0.24.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
